# QBiTSMSCollectorAgentA1

./: README.md  build.gradle.kts  settings.gradle.kts
app/: SmsRecevier.java  build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/qbitsmscollectoragenta1/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/qbit/direct/qbitsmscollectoragentv1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/qbitsmscollectoragenta1/: MainActivity.kt
app/src/main/java/com/example/qbitsmscollectoragenta1/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/qbit/direct/qbitsmscollectoragentv1/: MainActivity.kt  SmsRecevier.java
app/src/main/java/com/qbit/direct/qbitsmscollectoragentv1/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/qbitsmscollectoragenta1/: ExampleUnitTest.kt
app/src/test/java/com/qbit/direct/qbitsmscollectoragentv1/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sms-scanner/: build.gradle.kts
sms-scanner/src/androidTest/java/com/jjventures/sms_scanner/: ExampleInstrumentedTest.kt
sms-scanner/src/androidTest/java/com/qbit/sms_scanner/: ExampleInstrumentedTest.kt
sms-scanner/src/main/: AndroidManifest.xml
sms-scanner/src/main/res/values/: strings.xml  themes.xml
sms-scanner/src/main/res/values-night/: themes.xml
sms-scanner/src/test/java/com/jjventures/sms_scanner/: ExampleUnitTest.kt
